cabal-version: 2.2
name: unlifted
version: 0.1.0.0
synopsis: Unlifted and levity-polymorphic types
description:
  Unlifted and levity-polymorphic variants of several types from
  `base`. In GHC 8.10 and up, these are implemented using `UnliftedNewtypes`.
  Earlier GHCs use type synonyms.
homepage: https://github.com/andrewthad/unlifted
bug-reports: https://github.com/andrewthad/unlifted/issues
license: BSD-3-Clause
license-file: LICENSE
author: Andrew Martin
maintainer: andrew.thaddeus@gmail.com
copyright: 2019 Andrew Martin
category: Data
extra-source-files: CHANGELOG.md

library
  exposed-modules:
    Data.Unlifted
  other-modules:
    Data.Unlifted.Internal
  hs-source-dirs: src
  if impl(ghc < 8.9)
    hs-source-dirs: src-synonym
  else
    hs-source-dirs: src-newtype
  -- other-modules:
  -- other-extensions:
  build-depends: base >=4.12 && <5
  hs-source-dirs: src
  default-language: Haskell2010
